--- a/components/ContainerHeading/styles.module.scss
+++ b/components/ContainerHeading/styles.module.scss
@@ -4,7 +4,7 @@
   .container_heading {
     @include flex-center;
     column-gap: 1rem;
-    max-width: 820px;
+    max-width: 51.25rem;
 
     .heading {
       white-space: nowrap;
