--- a/components/Hero/styles.module.scss
+++ b/components/Hero/styles.module.scss
@@ -3,12 +3,20 @@
 @include mobile {
   .hero {
     @include flex-column;
+    position: relative;
     row-gap: 3rem;
     padding: 2.5rem var(--screen-padding);
 
     .content {
+      position: relative;
       @include flex--center-column;
       row-gap: 2rem;
+
+      .text,
+      .connect_button,
+      .social {
+        z-index: 2;
+      }
 
       .text {
         @include flex-column;
@@ -17,7 +25,7 @@
 
         p {
           margin-top: 1rem;
-          max-width: 350px;
+          max-width: 21.875rem;
         }
         h2 {
           font-weight: 300 !important;
@@ -60,9 +68,8 @@
     }
 
     .code_schemes {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      @include flex-center-column;
+      z-index: 2;
       row-gap: 1.5rem;
 
       width: fit-content;
@@ -72,10 +79,11 @@
         height: fit-content;
         border-radius: 1rem;
         padding: 2rem 2.5rem;
+        background-color: var(--secondary-color);
 
         pre {
           font-family: "Poppins", sans-serif;
-          font-size: 10px;
+          font-size: 0.625rem;
           letter-spacing: 0.05em;
           line-height: 200%;
           color: var(--quaternary-color);
@@ -83,10 +91,10 @@
       }
 
       .schemes {
+        @include flex-center;
         padding: 1rem;
-        display: flex;
-        align-items: center;
         column-gap: 1rem;
+        background-color: var(--secondary-color);
 
         border-radius: 0.5rem;
 
@@ -111,21 +119,36 @@
       }
     }
   }
+
+  .hexagon {
+    position: absolute;
+    transform: translateX(80%) translateY(-28%);
+    right: 0;
+    svg path {
+      fill: var(--tertiary-color);
+    }
+  }
 }
 
-@media screen and (min-width: 798px) {
+@media screen and (min-width: 49.875rem) {
   .hero {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
   }
+
+  .hexagon {
+    transform: translateX(80%) translateY(-6%);
+  }
 }
 
 @include tabletLarge {
   .hero {
+    padding: 2.5rem var(--screen-padding) 4rem var(--screen-padding);
+
     .content,
     .code_schemes {
-      height: 540px;
+      height: 33.75rem;
       justify-content: center;
     }
 
@@ -136,7 +159,7 @@
         row-gap: 0.5rem;
 
         p {
-          max-width: 410px;
+          max-width: 25.625rem;
           margin-top: 1rem;
         }
       }
@@ -146,8 +169,12 @@
       padding: 3rem 3.5rem;
 
       pre {
-        font-size: 14px;
+        font-size: 0.875rem;
       }
+    }
+
+    .hexagon {
+      transform: translateX(70%);
     }
   }
 }
@@ -155,7 +182,7 @@
 @include desktopSmall {
   .hero {
     .content .text p {
-      max-width: 500px;
+      max-width: 31.25rem;
     }
     .code_schemes {
       flex-direction: row;
