--- a/components/Nav/styles.module.scss
+++ b/components/Nav/styles.module.scss
@@ -2,17 +2,15 @@
 
 @include mobile {
   .nav {
+    @include flex-center-sb;
     position: sticky;
     top: 0rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     padding: 1rem var(--screen-padding);
     transform: translateY(0);
     transition: transform 0.3s ease-out;
 
     background-color: var(--secondary-color);
-    z-index: 2;
+    z-index: 3;
 
     .nav_logo {
       width: 2rem;
@@ -30,9 +28,11 @@
       }
     }
 
+    .nav_elements,
+    .button_container {
+      @include flex-center;
+    }
     .nav_elements {
-      display: flex;
-      align-items: center;
       padding: 0 1rem;
       column-gap: 1.5rem;
 
@@ -50,8 +50,6 @@
     }
 
     .button_container {
-      display: flex;
-      align-items: center;
       background-color: var(--tertiary-color);
 
       width: 4.5rem;
@@ -60,9 +58,7 @@
       cursor: pointer;
 
       .icon_container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @include flex-center-center;
 
         width: 2rem;
         height: 2rem;
@@ -76,8 +72,8 @@
 
         svg {
           stroke: var(--primary-color);
-          width: 16px;
-          height: 16px;
+          width: 1rem;
+          height: 1rem;
         }
       }
     }
@@ -92,7 +88,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .nav {
     .nav_elements {
       a {
