--- a/components/SkillSet/styles.module.scss
+++ b/components/SkillSet/styles.module.scss
@@ -3,7 +3,7 @@
 .skillSet {
   @include flex-column;
   row-gap: 3rem;
-  padding: 6rem var(--screen-padding) 2rem var(--screen-padding);
+  padding: 2.5rem var(--screen-padding);
 
   .tech_stack {
     display: grid;
@@ -15,9 +15,7 @@
     flex-wrap: wrap;
 
     span {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      @include flex-center-center;
       background-color: var(--container-color);
       width: clamp(3rem, 16vw, 9rem);
       height: clamp(3rem, 16vw, 9rem);
@@ -35,7 +33,7 @@
 
 @include tabletLarge {
   .skillSet {
-    padding: 5rem var(--screen-padding) 2rem var(--screen-padding);
+    padding: 2.5rem var(--screen-padding) 4rem var(--screen-padding);
     row-gap: 3.5rem;
 
     .tech_stack {
@@ -52,19 +50,18 @@
 
 @include desktopSmall {
   .skillSet {
-    padding: 5rem var(--screen-padding) 2rem var(--screen-padding);
     row-gap: 4.5rem;
 
     .tech_stack {
       padding: 2.5rem 0;
 
       span {
-        width: 150px;
-        height: 150px;
+        width: 9.375rem;
+        height: 9.375rem;
 
         svg {
-          max-width: 80px;
-          max-height: 80px;
+          max-width: 5rem;
+          max-height: 5rem;
           border-radius: 0.5rem;
         }
       }
