--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,14 +1,15 @@
+@use "abstract" as *;
+
 .app {
   position: relative;
   background-color: var(--secondary-color);
   width: 100%;
   height: 100%;
   min-height: calc(var(--vh, 1vh) * 100);
+  contain: paint;
 
   footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex-center-center;
 
     a {
       padding: 1.5rem 0;
