--- a/styles/abstract/theme.scss
+++ b/styles/abstract/theme.scss
@@ -55,7 +55,7 @@
   .white_black {
     --primary-color: #d9d9d9;
     --secondary-color: #f5f5f5;
-    --tertiary-color: #eaeaea;
+    --tertiary-color: #cacaca;
     --quaternary-color: #1f1f1f;
   }
   .white_black.dark {
