--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,9 +25,6 @@
 
 html,
 body {
-  --primary-color: #d1e1f5;
-  --secondary-color: #162031;
-
   padding: 0;
   margin: 0;
   font-family: "Poppins", sans-serif;
@@ -39,6 +36,21 @@ body {
       color var(--transition-time), fill var(--transition-time);
 
     -webkit-tap-highlight-color: transparent;
+  }
+  // overflow-x: hidden;
+
+  scrollbar-width: thin;
+
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+  &::-webkit-scrollbar-track {
+    background: var(--secondary-color);
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--tertiary-color);
+    border: 1px solid var(--tertiary-color);
+    border-radius: 0.625rem;
   }
 }
 
