updated themes and README

--- a/components/Hero/styles.module.scss
+++ b/components/Hero/styles.module.scss
@@ -104,17 +104,17 @@
           height: 2.25rem;
           border-radius: 0.25rem;
         }
-        .white_black {
-          background-color: var(--white_black-color);
+        .classic {
+          background-color: var(--classic-color);
         }
-        .red_robin {
-          background-color: var(--red_robin-color);
+        .red_rampage {
+          background-color: var(--red_rampage-color);
         }
         .green_goblin {
           background-color: var(--green_goblin-color);
         }
-        .blue_night {
-          background-color: var(--blue_night-color);
+        .blue_moon {
+          background-color: var(--blue_moon-color);
         }
       }
     }
