--- a/styles/abstract/theme.scss
+++ b/styles/abstract/theme.scss
@@ -1,6 +1,71 @@
 @mixin themes {
   --container_color: #f5f5f5;
 
+  // alpha colors
+  --classic-color: #eaeaea;
+  --blue_moon-color: #4077ae;
+  --green_goblin-color: #41aea9;
+  --red_rampage-color: #943910;
+
+  /*  themes  */
+
+  // classic theme
+  .classic {
+    --primary-color: #d9d9d9;
+    --secondary-color: #f5f5f5;
+    --tertiary-color: #cacaca;
+    --quaternary-color: #1f1f1f;
+  }
+  .classic.dark {
+    --primary-color: #d9d9d9;
+    --secondary-color: #1f1f1f;
+    --tertiary-color: #2f2f2f;
+    --quaternary-color: #ededed;
+  }
+
+  // green goblin theme
+  .green_goblin {
+    --primary-color: #e8ffff;
+    --secondary-color: #cae7e5;
+    --tertiary-color: #41aea9;
+    --quaternary-color: #213e3b;
+  }
+  .green_goblin.dark {
+    --primary-color: #f3f3f3;
+    --secondary-color: #132a29;
+    --tertiary-color: #338985;
+    --quaternary-color: #e1efee;
+  }
+
+  // blue moon theme
+  .blue_moon {
+    --primary-color: #f9f7f7;
+    --secondary-color: #dbe2ef;
+    --tertiary-color: #4077ae;
+    --quaternary-color: #112d4e;
+  }
+  .blue_moon.dark {
+    --primary-color: #e3d9d9;
+    --secondary-color: #162031;
+    --tertiary-color: #335e8a;
+    --quaternary-color: #d1e1f5;
+  }
+
+  // red rampage theme
+  .red_rampage {
+    --primary-color: #f9f7f7;
+    --secondary-color: #efe2db;
+    --tertiary-color: #943910;
+    --quaternary-color: #4e1f11;
+  }
+  .red_rampage.dark {
+    --primary-color: #e3d9d9;
+    --secondary-color: #381919;
+    --tertiary-color: #572209;
+    --quaternary-color: #f5d9d1;
+  }
+
+  /* box-shadow */
   .button {
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.12);
 
@@ -17,11 +82,6 @@
       box-shadow: 4px 6px 12px 4px rgba(0, 0, 0, 0.08);
     }
   }
-
-  --white_black-color: #eaeaea;
-  --green_goblin-color: #41aea9;
-  --red_robin-color: #943910;
-  --blue_night-color: #4077ae;
 
   .dark {
     --container_color: #e4e4e4;
@@ -46,61 +106,9 @@
     img {
       filter: brightness(0.88);
     }
-    --white_black-color: #2f2f2f;
+    --classic-color: #2f2f2f;
     --green_goblin-color: #338985;
-    --red_robin-color: #572209;
-    --blue_night-color: #335e8a;
-  }
-
-  .white_black {
-    --primary-color: #d9d9d9;
-    --secondary-color: #f5f5f5;
-    --tertiary-color: #cacaca;
-    --quaternary-color: #1f1f1f;
-  }
-  .white_black.dark {
-    --primary-color: #d9d9d9;
-    --secondary-color: #1f1f1f;
-    --tertiary-color: #2f2f2f;
-    --quaternary-color: #ededed;
-  }
-
-  .green_goblin {
-    --primary-color: #e8ffff;
-    --secondary-color: #cae7e5;
-    --tertiary-color: #41aea9;
-    --quaternary-color: #213e3b;
-  }
-  .green_goblin.dark {
-    --primary-color: #f3f3f3;
-    --secondary-color: #132a29;
-    --tertiary-color: #338985;
-    --quaternary-color: #e1efee;
-  }
-
-  .blue_night {
-    --primary-color: #f9f7f7;
-    --secondary-color: #dbe2ef;
-    --tertiary-color: #4077ae;
-    --quaternary-color: #112d4e;
-  }
-  .blue_night.dark {
-    --primary-color: #e3d9d9;
-    --secondary-color: #162031;
-    --tertiary-color: #335e8a;
-    --quaternary-color: #d1e1f5;
-  }
-
-  .red_robin {
-    --primary-color: #f9f7f7;
-    --secondary-color: #efe2db;
-    --tertiary-color: #943910;
-    --quaternary-color: #4e1f11;
-  }
-  .red_robin.dark {
-    --primary-color: #e3d9d9;
-    --secondary-color: #381919;
-    --tertiary-color: #572209;
-    --quaternary-color: #f5d9d1;
+    --red_rampage-color: #572209;
+    --blue_moon-color: #335e8a;
   }
 }
